--- a/site/public/index.html
+++ b/site/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./css/index.css"
+    <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link rel="icon" type="img/png" href="./assets/favicon.png">
     <title>Home | Pick.me Cat</title>
 </head>
@@ -31,6 +31,44 @@
    <img src="./assets/bunner1.jpg" alt="gatinho" class="bunner1">
   <img src="./assets/bunner2.jpg" alt="gatinho" class="bunner1"> 
   
+<!-- cards -->
+<div class="container">
+  <div class="container-card">
+    <div class="card">
+      <div></div>
+    </div>
+
+    <div class="card">
+
+    </div>
+
+    <div class="card">
+
+    </div>
+  </div>
+
+</div>
+  <!-- Rodapé  -->
+    
+  <footer>
+    <div class="container">
+      <img src="assets/logo.png" alt="logo">
+
+      <div class="navegacao-footer">
+        <ul>
+          <li><a href="index.html">Home<a></li>
+          <li><a href="#">Nossa História</a></li>
+        </ul>
+
+        <p>Todos os direitos reservados | ©2022</p>
+      </div>
+
+      <div class="redes-footer">
+        <img src="./assets/linkedin.png" alt="icone linkedin">
+        <img src="./assets/instagram.png" alt="icone instagram">
+      </div>
+    </div>
+  </footer>
   
 </div>
 </div>
