--- a/site/public/index.html
+++ b/site/public/index.html
@@ -28,26 +28,93 @@
 
 
   <!-- Imagem Inicial -->
-   <img src="./assets/bunner1.jpg" alt="gatinho" class="bunner1">
-  <img src="./assets/bunner2.jpg" alt="gatinho" class="bunner1"> 
+  <img src="./assets/bunner1.jpg" alt="gatinho" class="bunner1">
+  <img src="./assets/bunner2.jpg" alt="gatinho" class="bunner2">  
+
+
   
 <!-- cards -->
+
+  <div class="texto-cards">
+    <h1>Título Qualquer</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, ipsum delectus. Consequuntur deserunt aliquam facere ab vel? Fugit cupiditate, sequi asperiores tempore repellendus et quibusdam dolor fuga? Ipsa, modi a?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis recusandae provident incidunt ullam nisi eligendi nulla porro dolore quaerat est a, nemo iste vero consequuntur? Ipsam sit autem neque ratione.</p>
+
+  </div>
+  <div class="caixa firts">
+    <div class="itens-card">
+        <img src="./assets/gato.png">
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, officia dolore minima rerum optio ullam dolorum quibusdam in quo ipsam velit sequi reiciendis, similique quas facere maiores quaerat ut nihil.
+    </p>
+    </div>  
+</div>
+
+<div class="caixa second">
+    <div class="itens-card">
+        <img src="./assets/gato (1).png">
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, officia dolore minima rerum optio ullam dolorum quibusdam in quo ipsam velit sequi reiciendis, similique quas facere maiores quaerat ut nihil.
+    </p>
+    </div> 
+</div>
+
+<div class="caixa third">
+    <div class="itens-card">
+        <img src="./assets/gato (2).png">
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, officia dolore minima rerum optio ullam dolorum quibusdam in quo ipsam velit sequi reiciendis, similique quas facere maiores quaerat ut nihil.
+    </p>
+    </div> 
+</div>
+
+<a class="botao-padrao btn-cards " href="#">Saiba mais!</a>
+
+<img src="./assets/white-cat-lies-on-woman-s-knees.jpg" alt="gatinho" class="bunner3"> 
+<!-- 
+cards blog -->
+
 <div class="container">
-  <div class="container-card">
-    <div class="card">
-      <div></div>
-    </div>
+  <div class="cards-blog">
+    <img src="#">
+    <h1>Titulo qualquer</h1>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+    </p>
+    <button>clique aqui</button>
 
-    <div class="card">
-
-    </div>
-
-    <div class="card">
-
-    </div>
   </div>
 
+  <div class="cards-blog">
+    <img src="#">
+    <h1>Titulo qualquer</h1>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+    </p>
+    <button>clique aqui</button>
+  </div>
+
+  <div class="cards-blog">
+    <img src="#">
+    <h1>Titulo qualquer</h1>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+    </p>
+    <button>clique aqui</button>
+  </div>
 </div>
+
+</div>
+
+
+
+
   <!-- Rodapé  -->
     
   <footer>
