--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -31,7 +31,7 @@
 <main>
     <div class="container-forms">
         <div class="formulario">
-            <img src="./assets/cadastro-img.png">
+            <img src="./assets/undraw_welcome_cats_thqn.png">
             <h1>Cadastre-se aqui!</h1>
             <p>Torne-se um voluntario</p>
 
