--- a/site/public/index.html
+++ b/site/public/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
+    <link rel="stylesheet" type="text/css" href="./css/style-geral.css">
     <link rel="icon" type="img/png" href="./assets/favicon.png">
     <title>Home | Pick.me Cat</title>
 </head>
 <body>
+
 <!-- header -->
 <header class="header">
     <div class="container">
@@ -26,14 +28,39 @@
     </div>
   </header>
 
+<!-- bunner 1 -->
+<div class="container-bunner">
+    <div class="texto-b">
+            <div class="titulo">
+            <h1>Seu melhor amigo!</h1>
+            </div>
+            <p>Desvende o mundo destes pequenos felinos e conheça a comovente história por trás desse projeto.</p>
+            <a class="botao-padrao btn-bunner " href="#">Saiba mais!</a>
+        </div>
+    </div>
 
-  <!-- Imagem Inicial -->
-  <img src="./assets/bunner1.jpg" alt="gatinho" class="bunner1">
-  <img src="./assets/bunner2.jpg" alt="gatinho" class="bunner2">  
+ 
+</div>
 
-
+<!-- bunner 2 -->
+<div class="container-bunner-second-image">
+    <div class="card-nossa-historia">
+      <div class="texto-bunner-second">
+        <h1>O Chico!</h1>
+          <p>
+            Conheça sobre o gatinho que inspirou este projeto, o Chico! O pequeno frajolinha
+            e sua dona contam com uma linda história de superação e resiliência da qual nasce uma 
+            grande e sincera amizade entre gato e garota
+          </p>
+            <a class="botao-padrao btn-bunner " href="#">Nos conheça!</a>
+     </div>
+    
+ </div>
+</div>
   
 <!-- cards -->
+
+
 
   <div class="texto-cards">
     <h1>Título Qualquer</h1>
@@ -70,43 +97,47 @@
 
 <a class="botao-padrao btn-cards " href="#">Saiba mais!</a>
 
-<img src="./assets/white-cat-lies-on-woman-s-knees.jpg" alt="gatinho" class="bunner3"> 
+<!-- terceira imagem do site  -->
+<div class="container-bunner-third"></div>
 <!-- 
 cards blog -->
 
+  <h1>Nosso blog</h1>
+
+
 <div class="container">
   <div class="cards-blog">
-    <img src="#">
+    <img src="../public/assets/Curiosidades-sobre-os-gatos.jpg">
     <h1>Titulo qualquer</h1>
     <p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit.
       Lorem ipsum dolor, sit amet consectetur adipisicing elit.
       Lorem ipsum dolor, sit amet consectetur adipisicing elit.
     </p>
-    <button>clique aqui</button>
+    <a class="botao-padrao" href="#">Saiba mais!</a>
 
   </div>
 
   <div class="cards-blog">
-    <img src="#">
+    <img src="./assets/gato-blog-2.jpg">
     <h1>Titulo qualquer</h1>
     <p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit.
       Lorem ipsum dolor, sit amet consectetur adipisicing elit.
       Lorem ipsum dolor, sit amet consectetur adipisicing elit.
     </p>
-    <button>clique aqui</button>
+    <a class="botao-padrao" href="#">Saiba mais!</a>
   </div>
 
   <div class="cards-blog">
-    <img src="#">
+    <img src="./assets/gato-blog-3.jpg">
     <h1>Titulo qualquer</h1>
     <p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit.
       Lorem ipsum dolor, sit amet consectetur adipisicing elit.
       Lorem ipsum dolor, sit amet consectetur adipisicing elit.
     </p>
-    <button>clique aqui</button>
+    <a class="botao-padrao" href="#">Saiba mais!</a>
   </div>
 </div>
 
