continuação desenvolvimento front end

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -19,7 +19,7 @@
       <nav class="navegacao">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Nossa História</a></li>
+          <li><a href="./nossa-historia.html">Nossa História</a></li>
     
         </ul>
         <a class="botao-login" href="login.html">Login</a>
@@ -99,15 +99,19 @@
 
 <!-- terceira imagem do site  -->
 <div class="container-bunner-third"></div>
-<!-- 
-cards blog -->
 
-  <h1>Nosso blog</h1>
+<!-- cards blog -->
 
 
-<div class="container">
+<div class="titulo-nosso-blog">
+  <h1>Nosso Blog</h1>
+</div>
+
+<div class="container-cards-blog">
+  
   <div class="cards-blog">
-    <img src="../public/assets/Curiosidades-sobre-os-gatos.jpg">
+    <a href="#"> <img src="./assets/gato-blog-01.jpg"></a>
+   
     <h1>Titulo qualquer</h1>
     <p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -119,7 +123,8 @@ cards blog -->
   </div>
 
   <div class="cards-blog">
-    <img src="./assets/gato-blog-2.jpg">
+    <a href="#"><img src="./assets/gato-blog-2.jpg"></a>
+
     <h1>Titulo qualquer</h1>
     <p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -130,7 +135,8 @@ cards blog -->
   </div>
 
   <div class="cards-blog">
-    <img src="./assets/gato-blog-3.jpg">
+    <a href="#"> <img src="./assets/gato-blog-3.jpeg"></a>
+   
     <h1>Titulo qualquer</h1>
     <p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit.
