--- a/site/public/login.html
+++ b/site/public/login.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/cadastro.css">
+    <link rel="stylesheet" type="text/css" href="css/login.css">
     <link rel="stylesheet" type="text/css" href="./css/style-geral.css">
     <link rel="icon" type="img/png" href="./assets/favicon.png">
     <title>Cadastre-se! | Pick.Me Cat</title>
 </head>
 <body>
-    <!-- header -->
+<!-- header -->
 <header class="header">
     <div class="container">
       <img src="./assets/logo.png" alt="Pick.Me Cat Logo" id="logo">
@@ -32,14 +32,9 @@
 <main>
     <div class="container-forms">
         <div class="formulario">
-            <img src="./assets/undraw_welcome_cats_thqn.png">
-            <h1>Cadastre-se aqui!</h1>
-            <p>Torne-se um voluntario</p>
+            <img src="./assets/user-login.png">
+            <h1>Login</h1>
 
-            <div class="campo">
-                <label for="ipt-nome">Nome</label>
-                <input type="text" id="ipt-nome" placeholder="seu nome">
-            </div>
 
             <div class="campo">
                 <label for="ipt-email">Email</label>
@@ -51,9 +46,9 @@
                 <input type="password" id="ipt-senha" placeholder="******">
             </div>
 
-            <a>Já possui uma conta?</a>
-            <b><a href="./login.html">Acesse</a></b>
-            <button>Cadastrar</button>
+            <a>Ainda não possui uma conta?</a>
+            <b><a href="./cadastro.html">Cadastre-se!</a></b>
+            <button>Entrar</button>
         </div>
     </div>
 </main>
@@ -84,8 +79,3 @@
 </div>
 
     
-</body>
-</html>
-    
-</body>
-</html>
