--- a/site/public/index.html
+++ b/site/public/index.html
@@ -98,7 +98,11 @@
 <a class="botao-padrao btn-cards " href="#">Saiba mais!</a>
 
 <!-- terceira imagem do site  -->
-<div class="container-bunner-third"></div>
+<div class="container-bunner-third">
+  <video autoplay muted loop>
+    <source src="./assets/coverr-a-beautiful-cat-licks-itself-381-1080p.mp4">
+  </video>
+</div>
 
 <!-- cards blog -->
 
