--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -21,7 +21,7 @@
      <!-- header -->
 <header class="header">
     <div class="container">
-      <img src="./assets/imgs/logo.png" alt="Pick.Me Cat Logo" id="logo">
+      <!-- <img src="./assets/imgs/logo.png" alt="Pick.Me Cat Logo" id="logo"> -->
 
       <nav class="navegacao">
         <ul>
@@ -72,7 +72,7 @@
             <button onclick="cadastrar()">Cadastrar</button>
 
             <div id="div_aguardar" class="loading-div">
-                <img src="./assets/circle-loading.gif" id="loading-gif">
+                <!-- <img src="./assets/circle-loading.gif" id="loading-gif"> -->
             </div>
 
             <div id="div_erros_login">
@@ -88,7 +88,7 @@
     
 <footer>
     <div class="container">
-      <img src="assets/imgs/logo.png" alt="logo">
+      <!-- <img src="assets/imgs/logo.png" alt="logo"> -->
 
       <div class="navegacao-footer">
         <ul>
@@ -100,8 +100,8 @@
       </div>
 
       <div class="redes-footer">
-        <img src="./assets/imgs/linkedin.png" alt="icone linkedin">
-        <img src="./assets/imgs/instagram.png" alt="icone instagram">
+        <!-- <img src="./assets/imgs/linkedin.png" alt="icone linkedin">
+        <img src="./assets/imgs/instagram.png" alt="icone instagram"> -->
       </div>
     </div>
   </footer>
@@ -112,7 +112,6 @@
 <script>
     function cadastrar() {
         aguardar();
-
         //Recupere o valor da nova input pelo nome do id
         // Agora vá para o método fetch logo abaixo
         var nomeVar = ipt_nome.value;
