--- a/site/public/index.html
+++ b/site/public/index.html
@@ -192,6 +192,20 @@
 
     </div>
 
+    <!-- quiz -->
+    <div id='title'>
+        <h1>Learning Js Properly: Project #1 - Dynamic Quiz</h1>
+    </div>
+       <br/>
+      <div id='quiz'></div>
+    <div class='button' id='next'><a href='#'>Next</a></div>
+    <div class='button' id='prev'><a href='#'>Prev</a></div>
+    <div class='button' id='start'> <a href='#'>Start Over</a></div>
+    <!-- <button class='' id='next'>Next</a></button>
+    <button class='' id='prev'>Prev</a></button>
+    <button class='' id='start'> Start Over</a></button> -->
+</div>
+
 
 
 
