--- a/site/public/crud/index.html
+++ b/site/public/crud/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <img src="../public/assets/logo.png"> 
+        <img src="../assets/logo.png"> 
     </header>
     <main>
         <button type="button" class="button blue mobile" id="cadastrarCliente">Cadastrar Gatinho!</button>
