implementando mural de avisos

--- a/site/public/crud/index.html
+++ b/site/public/crud/index.html
@@ -20,7 +20,7 @@
         <img src="../assets/logo.png"> 
     </header>
     <main>
-        <button type="button" class="button blue mobile" id="cadastrarCliente">Cadastrar Gatinho!</button>
+        <button type="button" class="button blue mobile" id="cadastrarCliente" >Cadastrar Gatinho!</button>
         <table id="tableClient" class="records">
             <thead>
                 <tr>
@@ -47,7 +47,7 @@
                     <input type="text" id="nome" data-index="new" class="modal-field" placeholder="Nome"required>
                     <input type="text" id="email" class="modal-field" placeholder="Peso" required>
                     <input type="text" id="celular" class="modal-field" placeholder="Raça" required>
-                    <input type="text" id="cidade" class="modal-field" placeholder="Data" required>
+                    <input type="date" id="cidade" class="modal-field" placeholder="Data" required>
                 </form>
                 <footer class="modal-footer">
                     <button id="salvar" class="button pink">Salvar</button>
@@ -55,8 +55,8 @@
                 </footer>
             </div>
         </div>
+        
     </main>
-    <footer>
         <a href="../public/index.html">Home</a>
     </footer>
 </body>
