--- a/site/public/logon/logon.html
+++ b/site/public/logon/logon.html
@@ -10,8 +10,9 @@
     <script src="../js/funcoes.js"></script>
     <title>Bem vindo! | Cadastre gatinhos</title>
 </head>
-
-<body onload="validarSessao(), atualizarFeed()">
+<!-- 
+<body onload="validarSessao(), atualizarFeed()"> -->
+    <body>
     <!-- header -->
     <header class="header">
         <div class="container">
