editando css logon

--- a/site/public/logon/logon.html
+++ b/site/public/logon/logon.html
@@ -51,7 +51,7 @@
                     <label for="textarea_descricao">Descrição:</label>
                     <textarea name="textarea_descricao" id="textarea_descricao" maxlength="250" rows="5"></textarea>
                 </div>
-                <a onclick="publicar()">Enviar</a>
+                <a onclick="publicar()" class="btn-enviar">Enviar</a>
             </form>
         </div>
         <h1>Mural de Avisos</h1>
